--- a/fidesctl/demo_resources/demo_policy.yml
+++ b/fidesctl/demo_resources/demo_policy.yml
@@ -1,11 +1,9 @@
 policy:
-  - organization_fides_key: 1
-    fides_key: demo_privacy_policy
+  - fides_key: demo_privacy_policy
     name: Demo Privacy Policy
     description: The main privacy policy for the organization.
     rules:
-      - organization_fides_key: 1
-        fides_key: reject_direct_marketing
+      - fides_key: reject_direct_marketing
         name: Reject Direct Marketing
         description: Disallow collecting any user contact info to use for marketing.
         data_categories:
