--- a/fidesctl/requirements.txt
+++ b/fidesctl/requirements.txt
@@ -3,6 +3,7 @@ click==7.1.2
 colorama==0.4.4
 deepdiff==5.5.0
 fastapi[all]==0.68.1
+plotly==5.3.1
 PyJWT==2.1.0
 psycopg2-binary==2.9.1
 pydantic==1.8.2
