--- a/extensions/vscode/fidesctl-config-parser/package.json
+++ b/extensions/vscode/fidesctl-config-parser/package.json
@@ -34,7 +34,8 @@
 		"deploy": "vsce publish -i dist/fidesctl-config-parser.vsix",
 		"pretest": "npm run compile && npm run lint",
 		"lint": "eslint src --ext ts",
-		"test": "node ./out/test/runTest.js"
+		"test": "node ./out/test/runTest.js",
+		"deployed-version": "vsce show earmenda-fidesctl-publisher.fidesctl-config-parser | grep \"Version:\" | awk -F \":\" '{print $2}' | xargs"
 	},
 	"devDependencies": {
 		"@types/vscode": "^1.60.0",
@@ -47,6 +48,7 @@
 		"glob": "^7.1.7",
 		"mocha": "^9.1.1",
 		"typescript": "^4.4.3",
-		"@vscode/test-electron": "^1.6.2"
+		"@vscode/test-electron": "^1.6.2",
+		"vsce": "^1.100.1"
 	}
 }
