Add a dependency on tests before packaging and deployment

--- a/.github/workflows/extensions.vscode.fidesctl_config_parser.yaml
+++ b/.github/workflows/extensions.vscode.fidesctl_config_parser.yaml
@@ -26,6 +26,7 @@ jobs:
         run: xvfb-run -a npm test
   package_and_deploy:
     runs-on: ubuntu-latest
+    needs: [run_extension_tests]
     env: 
       working-directory: ./extensions/vscode/fidesctl-config-parser
     steps:
