Add secrets.VSCE_PAT to publish environment

--- a/.github/workflows/extensions.vscode.fidesctl_config_parser.yaml
+++ b/.github/workflows/extensions.vscode.fidesctl_config_parser.yaml
@@ -50,3 +50,5 @@ jobs:
         if: success() && env.NPM_PACKAGE_VERSION != env.PUBLISHED_PACKAGE_VERSION
         working-directory: ${{env.working-directory}}
         run: npm run package && npm run deploy
+        env:
+          VSCE_PAT: ${{ secrets.VSCE_PAT }}
