add a healthcheck to the api, fix some makefile commands,  update documentation

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,6 +4,11 @@ services:
       context: fidesctl
       dockerfile: Dockerfile
     command: uvicorn --host 0.0.0.0 --port 8080 --reload fidesapi.main:app
+    healthcheck:
+      test: ["CMD", "curl", "-f", "http://0.0.0.0:8000/health"]
+      interval: 5s
+      timeout: 5s
+      retries: 5
     depends_on:
       fidesctl-db:
         condition: service_healthy
