--- a/docs/fides/mkdocs.yml
+++ b/docs/fides/mkdocs.yml
@@ -7,7 +7,13 @@ nav:
   - Getting Started:
       - getting_started/docker.md
       - getting_started/local.md
-  - Tutorial: tutorial.md
+  - Tutorial:
+      - Understanding the Taxonomy: tutorial/taxonomy.md
+      - Annotate your Datasets: tutorial/dataset.md
+      - Create a System: tutorial/system.md
+      - Create a Policy: tutorial/policy.md
+      - Evaluate your Resources: tutorial/evaluate.md
+      - Integrate your CI: tutorial/ci.md
   - Deployment: deployment.md
   - CLI: cli.md
   - Development:
@@ -21,6 +27,8 @@ nav:
       - GitHub: community/github.md
       - Code of Conduct: community/code_of_conduct.md
 theme:
+  palette:
+      primary: blue
   name: material
   favicon: img/favicon.png
   logo: img/logo.png
@@ -40,4 +48,4 @@ markdown_extensions:
 extra_javascript:
   - https://cdnjs.cloudflare.com/ajax/libs/highlight.js/10.7.2/highlight.min.js
 extra_css:
-  - https://cdnjs.cloudflare.com/ajax/libs/highlight.js/10.7.2/styles/default.min.css
+  - css/stylesheet.css
