--- a/fidesctl/MANIFEST.in
+++ b/fidesctl/MANIFEST.in
@@ -4,4 +4,4 @@ include requirements.txt
 include dev-requirements.txt
 include versioneer.py
 include src/fidesctl/_version.py
-include src/alembic.ini
+include src/fidesapi/alembic.ini
