--- a/fidesctl/MANIFEST.in
+++ b/fidesctl/MANIFEST.in
@@ -1,6 +1,7 @@
 include LICENSE
+include README.md
 include requirements.txt
 include dev-requirements.txt
 include versioneer.py
 include src/fidesctl/_version.py
-include src/alembic.ini
+include src/fidesapi/alembic.ini
