updating with PR comments
Added overview to tutorial, placeholder diagrams, channels for README, and content updates

--- a/docs/fides/mkdocs.yml
+++ b/docs/fides/mkdocs.yml
@@ -8,6 +8,7 @@ nav:
       - getting_started/docker.md
       - getting_started/local.md
   - Tutorial:
+      - Tutorial Overview: tutorial/overview.md
       - Understanding the Taxonomy: tutorial/taxonomy.md
       - Annotate your Datasets: tutorial/dataset.md
       - Create a System: tutorial/system.md
