--- a/fidesctl/requirements.txt
+++ b/fidesctl/requirements.txt
@@ -8,6 +8,7 @@ plotly==5.3.1
 PyJWT==2.1.0
 psycopg2-binary==2.9.1
 pydantic==1.8.2
+pymysql==1.0.2
 pyyaml==5.4.1
 requests==2.25.1
 sqlalchemy==1.4.14
